# vbox-service-restarter

./: Dockerfile  pyproject.toml
.github/workflows/: pipeline.yml
.portainer/: Dockerfile
app/: __main__.py  constants.py  service_restarter.py
